WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36173
[GTK] http/history tests are failing
https://bugs.webkit.org/show_bug.cgi?id=36173
Summary
[GTK] http/history tests are failing
Sergio Villar Senin
Reported
2010-03-16 09:54:37 PDT
Basically due to two issues: * the LayoutController is not returning the actual back forward list count * there is no way to clear the back forward list
Attachments
Patch that fixes all the http/history test cases
(8.57 KB, patch)
2010-03-16 10:03 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Patch that fixes all the http/history Skipped tests
(8.57 KB, patch)
2010-03-16 10:17 PDT
,
Sergio Villar Senin
xan.lopez
: review-
Details
Formatted Diff
Diff
Added new API to clear the back forward list
(6.78 KB, patch)
2010-03-16 11:24 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Fix the http/history test cases
(5.18 KB, patch)
2010-03-16 11:25 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Adds new API to clear back forward list
(6.77 KB, patch)
2010-03-25 01:50 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2010-03-16 10:03:22 PDT
Created
attachment 50803
[details]
Patch that fixes all the http/history test cases Basically this patch does two very basic things: * return the actual count of history items in LayoutTestController * clear the back forward list (history) each time we run a test
WebKit Review Bot
Comment 2
2010-03-16 10:07:39 PDT
Attachment 50803
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/gtk/ChangeLog:13: Line contains tab character. [whitespace/tab] [5] WebKit/gtk/webkit/webkitwebbackforwardlist.h:114: Extra space before ( in function call [whitespace/parens] [4] WebKitTools/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] WebKitTools/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] WebKitTools/ChangeLog:15: Line contains tab character. [whitespace/tab] [5] Total errors found: 5 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sergio Villar Senin
Comment 3
2010-03-16 10:17:14 PDT
Created
attachment 50804
[details]
Patch that fixes all the http/history Skipped tests New version of the patch with some style corrections
WebKit Review Bot
Comment 4
2010-03-16 10:18:08 PDT
Attachment 50804
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/gtk/ChangeLog:13: Line contains tab character. [whitespace/tab] [5] WebKit/gtk/webkit/webkitwebbackforwardlist.h:114: Extra space before ( in function call [whitespace/parens] [4] WebKitTools/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] WebKitTools/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] WebKitTools/ChangeLog:15: Line contains tab character. [whitespace/tab] [5] Total errors found: 5 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xan Lopez
Comment 5
2010-03-16 10:31:07 PDT
Comment on
attachment 50804
[details]
Patch that fixes all the http/history Skipped tests Commented this on jabber, we are going to do it in two patches (one adding new API + unit test, other fixing DRT). So r- for now.
Sergio Villar Senin
Comment 6
2010-03-16 11:24:48 PDT
Created
attachment 50814
[details]
Added new API to clear the back forward list Patch that adds a new API to clear the back forward list + unit test
Sergio Villar Senin
Comment 7
2010-03-16 11:25:57 PDT
Created
attachment 50815
[details]
Fix the http/history test cases Patch that fixes the http/history test cases * Return the actual history item count * Removed tests from the Skipped file
WebKit Review Bot
Comment 8
2010-03-16 11:56:33 PDT
Attachment 50815
[details]
did not build on gtk: Build output:
http://webkit-commit-queue.appspot.com/results/858032
Eric Seidel (no email)
Comment 9
2010-03-25 01:46:13 PDT
Comment on
attachment 50815
[details]
Fix the http/history test cases OK.
Sergio Villar Senin
Comment 10
2010-03-25 01:50:54 PDT
Created
attachment 51608
[details]
Adds new API to clear back forward list Changes from the original patch: * addItem1 renamed to addItem * Since version 1.1.24 -> 1.1.30
WebKit Review Bot
Comment 11
2010-03-25 01:51:35 PDT
Attachment 51608
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/gtk/webkit/webkitwebbackforwardlist.h:114: Extra space before ( in function call [whitespace/parens] [4] WARNING: File exempt from style guide. Skipping: "WebKit/gtk/tests/testwebbackforwardlist.c" Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xan Lopez
Comment 12
2010-03-25 02:03:15 PDT
Comment on
attachment 51608
[details]
Adds new API to clear back forward list r=me
WebKit Commit Bot
Comment 13
2010-03-25 05:03:45 PDT
Comment on
attachment 51608
[details]
Adds new API to clear back forward list Clearing flags on attachment: 51608 Committed
r56531
: <
http://trac.webkit.org/changeset/56531
>
Eric Seidel (no email)
Comment 14
2010-04-06 23:50:06 PDT
Comment on
attachment 50815
[details]
Fix the http/history test cases Actually, I'd much rather some Gtk person landed this by hand.
Adam Barth
Comment 15
2010-05-14 23:52:02 PDT
Comment on
attachment 50815
[details]
Fix the http/history test cases In that case, we should mark it cq-.
Adam Barth
Comment 16
2010-05-14 23:54:06 PDT
Comment on
attachment 50815
[details]
Fix the http/history test cases This has been setting in pending-commit for over a month. If you'd like to land this patch, please do so with Eric's review. Clearing the review flag since this isn't doing anyone any good languishing in pending-commit.
Xan Lopez
Comment 17
2010-10-19 01:35:32 PDT
Comment on
attachment 50815
[details]
Fix the http/history test cases This should work now, let's try.
WebKit Commit Bot
Comment 18
2010-10-19 01:49:09 PDT
Comment on
attachment 50815
[details]
Fix the http/history test cases Clearing flags on attachment: 50815 Committed
r70039
: <
http://trac.webkit.org/changeset/70039
>
WebKit Commit Bot
Comment 19
2010-10-19 01:49:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug